update with z-index fix on arccorp

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -1,4 +1,9 @@
 .ReactModalPortal {
+
+  .ReactModal__Overlay {
+    z-index: 1;
+  }
+
   .modal-close {
     font-size: 22px;
     cursor: pointer;
